--- a/css/style.css
+++ b/css/style.css
@@ -36376,3 +36376,11 @@ body.dark .pricing-plan-page .pricing-plan-tab-area .nav-area {
   transform: translateY(20px);
 }
 
+ .animated-text {
+      opacity: 0;
+      transform: translateY(-60px);
+    }
+    
+    .animated-text.active {
+  opacity: 1;
+}
